--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@sanity/image-url": "^1.1.0",
     "cra-template": "1.2.0",
     "emailjs-com": "^3.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "three": "^0.172.0",
@@ -41,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
